deployments/gateway-test/routes/fallback-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: fallback-gateway
  namespace: gateway--test
spec:
  type: ExternalName
  externalName: continuumtest--gateway.elife.internal
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: fallback-gateway
  namespace: gateway--test
  labels:
    kubernetes.io/service-name: fallback-gateway
addressType: FQDN
ports:
  - protocol: TCP
    port: 80
endpoints:
  - addresses:
      - continuumtest--gateway.elife.internal
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: fallback
  namespace: gateway--test
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: api-gateway
    namespace: gateway--test
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: fallback-gateway
      namespace: gateway--staging
      port: 80
