deployments/gateway-test/routes/podinfo.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: podinfo
  namespace: podinfo--staging
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: gateway--test
  to:
  - group: ""
    kind: Service
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: podinfo
  namespace: gateway--test
  annotations:
    konghq.com/plugins: rate-limit-5-min
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: api-gateway
    namespace: gateway--test
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /podinfo
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          replacePrefixMatch: /
          type: ReplacePrefixMatch
    backendRefs:
    - name: podinfo
      namespace: podinfo--staging
      port: 9898
